# matching-core

./: LEDGER.md  README.md  pyproject.toml
src/matching_core/: __init__.py  cascade.py  identifiers.py  normalize.py  similarity.py
tests/: test_golden.py
